# emotion

./: .gitignore  CMakeLists.txt  package.xml
artools_launch/: mainpage.dox  manifest.xml
controller/src/controller/cfg/: controller_paramsConfig.py
emotion/: .project
my_armsim/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
my_armsim/launch/: display.launch
my_armsim/nodes/: joint_state_publisher.py  simple_publisher_example.py  tf_broadcaster_example.py  twist_publisher_example.py
my_armsim/rviz/: urdf.rviz
my_armsim/urdf/: arm_4DOF.urdf  myfirst.urdf  r2d2.urdf
my_python_trials/: .project  .pydevproject
my_python_trials/img/: poros1.TIF
proyecto_de_robotica/nodes/: odometry_publisher.py
social_filter/: .project
trajectory_simulator/: .cproject  .project  cmake_install.cmake
wheelchairconf/: CMakeLists.txt  package.xml
wheelchairint/: package.xml
wheelchairint/nodes/: servo_following.py
